renamed the res/html folder to avoid confusion. got sounds to work at a pretty basic level, going to look into better techniques for overlapping sounds.

--- a/main_page.css
+++ b/main_page.css
@@ -9,7 +9,7 @@ html{
 body {
 	margin: 0.0;
 	background-color: #141414;
-	background-image: url("res/html/gameplay_test.png");
+	background-image: url("res/webpage/gameplay_test.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100%;
